--- a/src/index.css
+++ b/src/index.css
@@ -30,11 +30,12 @@ a:hover {
 }
 
 body {
+  position: fixed;
   margin: 0;
   display: flex;
   place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  width: 100vw;
+  height: 100vh;
   overflow: hidden;
 }
 
