--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,16 @@
 #root {
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+  width: 100%;
+  height: 100%;
 }
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  text-align: center;
+}
+
+.App {
+  width: 100%;
+  height: 100%;
 }
